--- a/Frontend/src/component/auth/login.css
+++ b/Frontend/src/component/auth/login.css
@@ -11,18 +11,12 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  text-align: center;
 }
-
-.login-content > img {
-  width: 200px;
-  object-fit: contain;
-  margin: 20px;
-}
-
-.login-content > button {
-  padding: 10px;
-  margin: 50px 0px;
-  background-color: #000;
+.btn-login {
+  padding: 10px 20px;
+  margin-top: 50px;
+  background-color: #007bff;
   color: #fff;
   outline: none;
   border: none;
@@ -30,4 +24,61 @@
   letter-spacing: 1.1px;
   font-family: monospace;
   cursor: pointer;
+}
+
+.btn-login:hover {
+  background-color: #0056b3;
+}
+.login-content > img {
+  width: 200px;
+  object-fit: contain;
+  margin: 20px;
+}
+
+.login-content > button {
+  padding: 10px 20px;
+  margin-top: 50px;
+  background-color: #007bff;
+  color: #fff;
+  outline: none;
+  border: none;
+  border-radius: 3px;
+  letter-spacing: 1.1px;
+  font-family: monospace;
+  cursor: pointer;
+}
+
+.login-content > button:hover {
+  background-color: #0056b3;
+}
+
+.email-password-signin,
+.email-password-signup {
+  margin-top: 20px;
+}
+
+.email-password-signin input,
+.email-password-signup input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.btn-signup {
+  padding: 10px 20px;
+  margin-top: 20px; /* Adjust as needed */
+  background-color: #007bff;
+  color: #fff;
+  outline: none;
+  border: none;
+  border-radius: 3px;
+  letter-spacing: 1.1px;
+  font-family: monospace;
+  cursor: pointer;
+}
+
+.btn-signup:hover {
+  background-color: #0056b3;
 }
